# cow-dex-solver

./: Cargo.toml  README.md
.github/workflows/: deploy.yaml  pull-request.yaml
contracts/artifacts/: ERC20.json
data/: token_list_for_buffer_trading.json
docker/: Dockerfile.binary  deploy.sh  startup.sh
src/: api.rs  lib.rs  main.rs  models.rs  slippage.rs  solve.rs  token_list.rs  utils.rs
src/api/: solve.rs
src/http_solver/: model.rs
src/models/: batch_auction_model.rs  limit_order.rs
src/solve/: paraswap_solver.rs  solve.rs  solver_utils.rs  zeroex_solver.rs
src/solve/paraswap_solver/: api.rs
src/solve/zeroex_solver/: api.rs
src/utils/: h160_hexadecimal.rs  ratio_as_decimal.rs  u256_decimal.rs
