[package]
name = "cowdexsolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cowdexsolver"
path = "src/lib.rs"

[[bin]]
name = "cowdexsolver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.3"
primitive-types = { version = "0.10.1", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
atty = "0.2"
tracing-subscriber = "0.2.23"
serde_with = "1.9.4"
rustc-hex = "2.1.0"
substring = "1.4.5"
structopt = "0.3.22"
tracing = "0.1.26"
warp = "0.3"
hex-literal = "0.3"
futures = "0.3.17"
reqwest = "0.11.5"
cid = "0.7.0"
ethcontract = "0.15.3"
num = "0.4.0"
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
maplit = "1.0.2"
