[package]
name = "cowdexsolver"
version = "0.0.0" # The version number isn't tracked, contact us if you plan to depend on this package
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cowdexsolver"
path = "src/lib.rs"

[[bin]]
name = "cowdexsolver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.43"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.3"
primitive-types = { version = "0.9", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
atty = "0.2"
tracing-subscriber = "0.2.23"
serde_with = "1.9.4"
rustc-hex = "2.1.0"
substring = "1.4.5"
structopt = "0.3.22"
tracing = "0.1.26"
warp = "0.3"
hex-literal = "0.3"
futures = "0.3.17"
reqwest = "0.11.5"
cid = "0.7.0"
ethcontract = "0.15.3"
num = "0.4.0"
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
maplit = "1.0.2"
secp256k1 = "0.20.3"
derivative = "2.2.0"
web3 = "0.17.0"
enum-utils = "0.1.2"
thiserror = "1.0.30"
ethabi = "15.0.0"
lazy_static = "1.4.0"
strum_macros = "0.22.0"
async-trait = "0.1.51"
use = "0.0.0"
tracing-test = "0.2.1"
